--- a/res/layout/activity_clinic_dates_dun_laoghaire.xml
+++ b/res/layout/activity_clinic_dates_dun_laoghaire.xml
@@ -5,55 +5,54 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="6.0"
-    tools:context="com.example.myapp.MainActivity" >
+    tools:context="${relativePackage}.${activityClass}" >
 
     <Button
-        android:id="@+id/week_one_Dlaoghaire"
+        android:id="@+id/week_one_dunlaoghaire"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/week_one_Dlaoghaire"
         android:layout_weight="1.0"
+        android:text="@string/week_one_dunlaoghaire"
         android:textSize="@dimen/text_small" />
-    
+
     <Button
-        android:id="@+id/week_two_Dlaoghaire"
+        android:id="@+id/week_two_dunlaoghaire"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/week_two_Dlaoghaire"
         android:layout_weight="1.0"
+        android:text="@string/week_two_dunlaoghaire"
         android:textSize="@dimen/text_small" />
-    
-     <Button
-         android:id="@+id/week_three_Dlaoghaire"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:text="@string/week_three_Dlaoghaire"
-         android:layout_weight="1.0"
-         android:textSize="@dimen/text_small" />
-     
-     <Button
-         android:id="@+id/week_four_Dlaoghaire"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:text="@string/week_four_Dlaoghaire"
-         android:layout_weight="1.0"
-         android:textSize="@dimen/text_small" />
-     
-     <Button
-         android:id="@+id/week_five_Dlaoghaire"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:text="@string/week_five_Dlaoghaire"
-         android:layout_weight="1.0"
-         android:textSize="@dimen/text_small" />
-     
-     <Button
-         android:id="@+id/week_six_Dlaoghaire"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:text="@string/week_six_Dlaoghaire"
-         android:layout_weight="1.0"
-         android:textSize="@dimen/text_small" />
-     
+
+    <Button
+        android:id="@+id/week_three_dunlaoghaire"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.0"
+        android:text="@string/week_three_dunlaoghaire"
+        android:textSize="@dimen/text_small" />
+
+    <Button
+        android:id="@+id/week_four_dunlaoghaire"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.0"
+        android:text="@string/week_four_dunlaoghaire"
+        android:textSize="@dimen/text_small" />
+
+    <Button
+        android:id="@+id/week_five_dunlaoghaire"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.0"
+        android:text="@string/week_five_dunlaoghaire"
+        android:textSize="@dimen/text_small" />
+
+    <Button
+        android:id="@+id/week_six_dunlaoghaire"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.0"
+        android:text="@string/week_six_dunlaoghaire"
+        android:textSize="@dimen/text_small" />
+
 </LinearLayout>
-
