--- a/res/layout/activity_clinic_dates_nmhopd.xml
+++ b/res/layout/activity_clinic_dates_nmhopd.xml
@@ -5,54 +5,54 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="6.0"
-    tools:context="com.example.myapp.MainActivity" >
+    tools:context="${relativePackage}.${activityClass}" >
 
     <Button
-        android:id="@+id/week_one_nmhOPD"
+        android:id="@+id/week_one_nmh_opd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/week_one_nmhOPD"
         android:layout_weight="1.0"
+        android:text="@string/week_one_nmh_opd"
         android:textSize="@dimen/text_small" />
-    
+
     <Button
-        android:id="@+id/week_two_nmhOPD"
+        android:id="@+id/week_two_nmh_opd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/week_two_nmhOPD"
         android:layout_weight="1.0"
+        android:text="@string/week_two_nmh_opd"
         android:textSize="@dimen/text_small" />
-    
-     <Button
-         android:id="@+id/week_three_nmhOPD"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:text="@string/week_three_nmhOPD"
-         android:layout_weight="1.0"
-         android:textSize="@dimen/text_small" />
-     
-     <Button
-         android:id="@+id/week_four_nmhOPD"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:text="@string/week_four_nmhOPD"
-         android:layout_weight="1.0"
-         android:textSize="@dimen/text_small" />
-     
-     <Button
-         android:id="@+id/week_five_nmhOPD"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:text="@string/week_five_nmhOPD"
-         android:layout_weight="1.0"
-         android:textSize="@dimen/text_small" />
-     
-     <Button
-         android:id="@+id/week_six_nmhOPD"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:text="@string/week_six_nmhOPD"
-         android:layout_weight="1.0"
-         android:textSize="@dimen/text_small" />
-     
+
+    <Button
+        android:id="@+id/week_three_nmh_opd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.0"
+        android:text="@string/week_three_nmh_opd"
+        android:textSize="@dimen/text_small" />
+
+    <Button
+        android:id="@+id/week_four_nmh_opd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.0"
+        android:text="@string/week_four_nmh_opd"
+        android:textSize="@dimen/text_small" />
+
+    <Button
+        android:id="@+id/week_five_nmh_opd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.0"
+        android:text="@string/week_five_nmh_opd"
+        android:textSize="@dimen/text_small" />
+
+    <Button
+        android:id="@+id/week_six_nmh_opd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.0"
+        android:text="@string/week_six_nmh_opd"
+        android:textSize="@dimen/text_small" />
+
 </LinearLayout>
