--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,113 +1,140 @@
-<LinearLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@color/white"
     android:orientation="vertical"
-    android:weightSum="2.0"
-    tools:context="${relativePackage}.${activityClass}" 
-    android:background="@color/white">
-    
-  <ImageView
-      android:contentDescription="@string/main_logo"
-      android:id="@+id/imageView"
-      android:layout_gravity="center|top"
-      android:layout_marginTop="10dp"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:background="@drawable/logo"
-	/>  
-	
-    <TextView
-      android:layout_gravity="center|top"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/smart"
-      android:textSize="23sp"
-      android:textColor="@color/grey"
-      android:layout_marginTop="15dp"
-	/> 
-	
-     <TextView
-      android:layout_gravity="center|top"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/secure_maternity"
-      android:textSize="20sp"
-      android:textColor="@color/blue"
-	/>  
-	 <TextView
-      android:layout_gravity="center|top"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/appointment_recording"
-      android:textSize="20sp"
-      android:textColor="@color/blue"/>
-	
-	
-	<TextView
-      android:layout_gravity="center|top"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/tracker"
-      android:textSize="20sp"
-      android:textColor="@color/blue"/>
+    android:weightSum="3.0"
+    tools:context="${relativePackage}.${activityClass}">
 
-	<EditText
-	    android:id="@+id/username"
-	    android:layout_width="320dp"
-	    android:layout_gravity="center"
-	    android:layout_height="wrap_content"
-	    android:layout_marginBottom="20dp"
-	    android:layout_marginTop="20dp"
-	    android:background="@drawable/drawable"
-	    android:gravity="start"
-	    android:hint="@string/username"
-	    android:inputType="text"
-	    android:maxLines="1" >
-
-    </EditText>
-    
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="320dp"
-        android:layout_gravity="center"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/drawable"
-        android:gravity="start"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        android:maxLines="1" >
+        android:layout_weight="1.0"
+        android:orientation="vertical">
 
-    </EditText>  
-          
-	<Button
-		android:id="@+id/login"
-		android:layout_width="320dp"
-		android:layout_gravity="center"
-		android:layout_height="wrap_content"
-		android:background="@color/blue"
-		android:text="@string/login"
-	/>  
-	
-   <TextView
-      android:layout_gravity="center|top"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="20dp"
-      android:textColor="@color/black"
-      android:text="@string/maternity_hospital"/>
-   
-     <TextView
-      android:id="@+id/about"
-      android:layout_gravity="center|top"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textColor="@color/blue"
-      android:textSize="20sp"
-      android:text="@string/about"/>
-   
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|top"
+            android:layout_marginTop="@dimen/padding_medium"
+            android:background="@drawable/logo"
+            android:contentDescription="@string/main_logo" />
 
-	
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="4.0"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|top"
+                android:layout_marginTop="@dimen/padding_small"
+                android:layout_weight="1.0"
+                android:text="@string/smart"
+                android:textColor="@color/grey"
+                android:textSize="@dimen/text_small" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|top"
+                android:layout_weight="1.0"
+                android:text="@string/secure_maternity"
+                android:textColor="@color/blue"
+                android:textSize="@dimen/text_small" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|top"
+                android:layout_weight="1.0"
+                android:text="@string/appointment_recording"
+                android:textColor="@color/blue"
+                android:textSize="@dimen/text_small" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|top"
+                android:layout_weight="1.0"
+                android:text="@string/tracker"
+                android:textColor="@color/blue"
+                android:textSize="@dimen/text_small" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.0"
+        android:orientation="vertical"
+        android:weightSum="3.0">
+
+        <EditText
+            android:id="@+id/username"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="@dimen/padding_medium"
+            android:layout_marginRight="@dimen/padding_medium"
+            android:layout_marginTop="@dimen/padding_medium"
+            android:layout_weight="1.0"
+            android:hint="@string/username"
+            android:inputType="text"
+            android:maxLines="1" />
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/padding_medium"
+            android:layout_marginLeft="@dimen/padding_medium"
+            android:layout_marginRight="@dimen/padding_medium"
+            android:layout_weight="1.0"
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            android:maxLines="1" />
+
+        <Button
+            android:id="@+id/login"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/padding_medium"
+            android:layout_marginRight="@dimen/padding_medium"
+            android:layout_weight="1.0"
+            android:background="@color/blue"
+            android:text="@string/login" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.0"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|top"
+            android:layout_marginTop="@dimen/padding_medium"
+            android:text="@string/maternity_hospital"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/about"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|top"
+            android:autoLink="web"
+            android:text="@string/about"
+            android:textColor="@color/blue"
+            android:textSize="@dimen/text_small" />
+    </LinearLayout>
 </LinearLayout>
