--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -5,6 +5,7 @@
     <color name="black">#000000</color>
     <color name="green">#2BE10E</color>
     <color name="blue">#198CFF</color>
+     <color name="lightBlue">#66ccff</color>
     <color name="purple">#C80CDF</color>
     <color name="brown">#CC5E03</color>
     <color name="grey">#CCCCCC</color>
