--- a/res/layout/activity_appointment_type.xml
+++ b/res/layout/activity_appointment_type.xml
@@ -3,16 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="2.0"
+    android:weightSum="4.0"
     tools:context="${relativePackage}.${activityClass}" >   
-    
+    <TextView
+        android:id="@+id/appointments"
+    	android:layout_width="match_parent"
+    	android:layout_height="wrap_content"
+    	android:layout_marginTop="@dimen/padding_medium"
+        android:layout_marginBottom="@dimen/padding_medium"
+    	android:layout_weight="0.5"
+        android:text="@string/appointments"
+        android:textSize="@dimen/text_large"
+    	android:gravity="center"/>
    <Button
         android:id="@+id/clinics"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/padding_large"
         android:layout_marginBottom="@dimen/padding_large"
-        android:layout_weight="1.0"
+        android:layout_weight="1.5"
         android:text="@string/clinics"
         android:textSize="@dimen/text_large" />
     <Button
@@ -21,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/padding_large"
         android:layout_marginBottom="@dimen/padding_large"
-        android:layout_weight="1.0"
+        android:layout_weight="1.5"
         android:text="@string/visits"
         android:textSize="@dimen/text_large" />
 </LinearLayout>
