--- a/res/menu/http_client.xml
+++ b/res/menu/http_client.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.team3.smartapp.HttpClient" >
+    tools:context="com.team3.smartapp.HttpClientActivity" >
 
     <item
         android:id="@+id/action_settings"
