--- a/res/layout/activity_appointment_type_spinner.xml
+++ b/res/layout/activity_appointment_type_spinner.xml
@@ -30,6 +30,30 @@
         android:entries="@array/domino_dublin" />
 
     <Spinner
+        android:id="@+id/domino_wicklow_spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/domino_wicklow" />
+
+    <Spinner
+        android:id="@+id/eth_dublin_spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/eth" />
+
+    <Spinner
+        android:id="@+id/eth_wicklow_spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/eth" />
+
+    <Spinner
+        android:id="@+id/satellite_spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/satellite" />
+
+    <Spinner
         android:id="@+id/week_spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
