--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -132,8 +132,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|top"
-            android:autoLink="web"
-            android:text="@string/about"
+            android:text="@string/about_link"
             android:textColor="@color/blue"
             android:textSize="@dimen/text_small" />
     </LinearLayout>
