--- a/res/layout/activity_appointment_calendar.xml
+++ b/res/layout/activity_appointment_calendar.xml
@@ -31,6 +31,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.1"
-        android:text="i" />
+        android:text="info" />
 
 </LinearLayout>
