--- a/res/layout/activity_service_user_search.xml
+++ b/res/layout/activity_service_user_search.xml
@@ -25,13 +25,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.85"
             android:hint="Enter Search Parameters"
+            android:text="Nore Saturn"
             android:paddingTop="@dimen/padding_medium" />
 
         <Button
             android:id="@+id/search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.15" />
+            android:layout_weight="0.15" 
+            android:text="Search"/>
 
     </LinearLayout>
 
