--- a/res/menu/menu_appointment_calendar.xml
+++ b/res/menu/menu_appointment_calendar.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.team3.smartapp.AppointmentCalendarActivity">
+    tools:context="ie.teamchile.smartapp.AppointmentCalendarActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
 </menu>
