--- a/res/menu/menu_service_user_search.xml
+++ b/res/menu/menu_service_user_search.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.team3.smartapp.ServiceUserSearchActivity">
+    tools:context="ie.teamchile.smartapp.ServiceUserSearchActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
     <item 
