--- a/res/layout/activity_contact_details.xml
+++ b/res/layout/activity_contact_details.xml
@@ -6,7 +6,11 @@
     android:weightSum="10"
     android:layout_gravity="center_vertical"
     tools:context="${relativePackage}.${activityClass}" >
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    >
     <TextView
         android:id="@+id/Midwife_Name"
         android:layout_width="wrap_content"
@@ -14,10 +18,24 @@
         android:layout_marginTop="@dimen/padding_Xlarge"
         android:layout_marginBottom="@dimen/padding_Xlarge"
         android:textSize="@dimen/text_medium"
-        android:weightSum="1.0"
         android:layout_gravity="center_vertical"
         android:text="@string/Midwife_Name" />
 
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/padding_Xlarge"
+        android:layout_marginTop="@dimen/padding_Xlarge"
+        android:layout_weight="5"
+        android:textSize="@dimen/text_medium"
+        android:text="  Mary" />
+
+</LinearLayout>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    >
     <TextView
         android:id="@+id/Midwife_Email"
         android:layout_width="wrap_content"
@@ -25,10 +43,23 @@
         android:layout_marginTop="@dimen/padding_Xlarge"
         android:layout_marginBottom="@dimen/padding_Xlarge"
         android:textSize="@dimen/text_medium"
-        android:weightSum="1.0"
         android:layout_gravity="center_vertical"
         android:text="@string/Midwife_Email" />
 
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/padding_Xlarge"
+        android:layout_marginBottom="@dimen/padding_Xlarge"
+        android:layout_weight="5"
+        android:textSize="@dimen/text_medium"
+        android:text="  Mary@gmail.com" />
+    </LinearLayout>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    >
     <TextView
         android:id="@+id/Primary_Number"
         android:layout_width="wrap_content"
@@ -36,20 +67,42 @@
         android:layout_marginTop="@dimen/padding_Xlarge"
         android:layout_marginBottom="@dimen/padding_Xlarge"
         android:textSize="@dimen/text_medium"
-        android:weightSum="1.0"
         android:layout_gravity="center_vertical"
         android:text="@string/Primary_Number" />
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/padding_Xlarge"
+        android:layout_marginBottom="@dimen/padding_Xlarge"
+        android:layout_weight="5"
+        android:textSize="@dimen/text_medium"
+        android:text="  0861524315" />
+    </LinearLayout>
+
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal" >
 
     <TextView
         android:id="@+id/Secondary_Number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/padding_Xlarge"
-        android:layout_marginBottom="@dimen/padding_Xlarge"
-        android:textSize="@dimen/text_medium"
-        android:weightSum="1.0"
         android:layout_gravity="center_vertical"
-        android:text="@string/Secondary_Number" />
+        android:layout_marginBottom="@dimen/padding_Xlarge"
+        android:layout_marginTop="@dimen/padding_Xlarge"
+        android:text="@string/Secondary_Number"
+        android:textSize="@dimen/text_medium" />
 
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/padding_Xlarge"
+        android:layout_marginTop="@dimen/padding_Xlarge"
+        android:layout_weight="5"
+        android:textSize="@dimen/text_medium"
+        android:text="  0852514235" />
+</LinearLayout>
 
 </LinearLayout>
