--- a/res/layout/contact_dialog_box.xml
+++ b/res/layout/contact_dialog_box.xml
@@ -2,15 +2,30 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
+         
     <Button
         android:id="@+id/makeCall"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@drawable/drawable"
         android:layout_height="wrap_content"
+        android:text="Phone Call"
+        />
+    
+    <Button
+        android:id="@+id/sendSms"
+        android:layout_width="match_parent"
+        android:background="@drawable/drawable"
+        android:layout_height="wrap_content"
+        android:text="Send SMS"
         />
     <Button
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+        android:id="@+id/cancel"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/drawable"
+        android:text="Cancel"
         />
+  
+  
     
 </LinearLayout>
