--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -131,8 +131,9 @@
             android:id="@+id/about"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|top"/>
-            
-
+            android:layout_gravity="center|top"
+            android:text="@string/about"
+            android:textColor="@color/blue"/>
+           
     </LinearLayout>
 </LinearLayout>
