--- a/res/layout/activity_appointment_calendar.xml
+++ b/res/layout/activity_appointment_calendar.xml
@@ -7,30 +7,12 @@
     tools:context="ie.teamchile.smartapp.AppointmentCalendarActivity">
 
     <TextView
+        android:id="@+id/appointment_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.1"
         android:paddingLeft="4dp"
-        android:text="08:00"
+        android:text="Appointment Info Goes Here"
         android:textSize="@dimen/text_medium" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="3.7"
-        android:text="Mary Dowd" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.1"
-        android:text="23+4"
-        android:textSize="@dimen/text_medium" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.1"
-        android:text="info" />
 
 </LinearLayout>
