--- a/res/layout/activity_contact_details.xml
+++ b/res/layout/activity_contact_details.xml
@@ -13,13 +13,13 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/Midwife_Name"
+            android:id="@+id/midwife_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="@dimen/padding_Xlarge"
             android:layout_marginTop="@dimen/padding_Xlarge"
-            android:text="@string/Midwife_Name"
+            android:text="@string/midwife_name"
             android:textSize="@dimen/text_medium" />
 
         <TextView
@@ -38,13 +38,13 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/Midwife_Email"
+            android:id="@+id/midwife_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="@dimen/padding_Xlarge"
             android:layout_marginTop="@dimen/padding_Xlarge"
-            android:text="@string/Midwife_Email"
+            android:text="@string/midwife_email"
             android:textSize="@dimen/text_medium" />
 
         <TextView
@@ -63,13 +63,13 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/Primary_Number"
+            android:id="@+id/primary_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="@dimen/padding_Xlarge"
             android:layout_marginTop="@dimen/padding_Xlarge"
-            android:text="@string/Primary_Number"
+            android:text="@string/primary_number"
             android:textSize="@dimen/text_medium" />
 
         <TextView
@@ -88,13 +88,13 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/Secondary_Number"
+            android:id="@+id/secondary_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="@dimen/padding_Xlarge"
             android:layout_marginTop="@dimen/padding_Xlarge"
-            android:text="@string/Secondary_Number"
+            android:text="@string/secondary_number"
             android:textSize="@dimen/text_medium" />
 
         <TextView
