--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -14,6 +14,8 @@
     <dimen name="text_medium">23sp</dimen>
     <dimen name="text_large">27sp</dimen>
     <dimen name="text_Xlarge">35sp</dimen>
+    
+    <!--  MARGIN -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
