--- a/res/layout/activity_appointment_calendar.xml
+++ b/res/layout/activity_appointment_calendar.xml
@@ -5,14 +5,11 @@
     android:orientation="horizontal"
     android:weightSum="4.0"
     tools:context="ie.teamchile.smartapp.AppointmentCalendarActivity">
-
-    <TextView
-        android:id="@+id/appointment_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.1"
-        android:paddingLeft="4dp"
-        android:text="Appointment Info Goes Here"
-        android:textSize="@dimen/text_medium" />
+    
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
 
 </LinearLayout>
