--- a/res/layout/activity_calendar.xml
+++ b/res/layout/activity_calendar.xml
@@ -6,6 +6,8 @@
 
     <CalendarView
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"></CalendarView>
+        android:layout_height="fill_parent">
+        
+    </CalendarView>
 
 </LinearLayout>
