--- a/res/layout/activity_service_user.xml
+++ b/res/layout/activity_service_user.xml
@@ -48,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="2+1" />
+                android:text="xx+x" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="35+5" />
+                android:text="xx+x" />
         </LinearLayout>
     </LinearLayout>
 
@@ -248,5 +248,4 @@
                 android:textSize="@dimen/text_large" />
         </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
