ID's for the contact dialog buttons renamed

--- a/res/layout/kin_contact_dialog_box.xml
+++ b/res/layout/kin_contact_dialog_box.xml
@@ -4,21 +4,21 @@
     android:orientation="vertical" >
 
     <Button
-        android:id="@+id/kinPhoneCall"
+        android:id="@+id/kin_Phone_Call"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/drawable"
         android:text="Phone Call" />
 
     <Button
-        android:id="@+id/kinSendSMS"
+        android:id="@+id/kin_Send_SMS"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/drawable"
         android:text="Send SMS" />
 
     <Button
-        android:id="@+id/kinCancel"
+        android:id="@+id/kin_Cancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/drawable"
